# My-Development-Ecosystem

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  agent-test-target.txt  mde_cli.py  pyproject.toml
apps/autoknowledge-lite/: .mde-project.json  README.md  pyproject.toml
apps/sample-project/: README.md
docs/: README.md
docs/01_constitution/: CON-000.md  CON-001 Constitution.md  CON-002 VISION.md  CON-003 Mission.md  CON-004 Core Values.md  CON-005 Development Philosophy .md  CON-006 AI Philosophy.md  CON-007 Knowledge Philosophy.md  CON-008 Ecosystem Architecture.md  CON-009 Long-Term Vision & Roadmap.md  CON-010 Documentation System.md  CON-011 Change Management.md  CON-012 Final Provisions.md  README.md
docs/02_governance/: GOV-001 My Development Ecosystem Governance Framework v1.0.md  GOV-002 Organization Structure.md  GOV-003 Roles & Responsibilities.md  GOV-004 Decision-Making Framework.md  GOV-005 Project Operations.md  GOV-006 AI Operations.md  GOV-007 Knowledge Operations.md  GOV-008 Quality Management.md  GOV-009 Automation Management.md  GOV-010 Change Management.md  GOV-011 Audit & Evaluation.md  GOV-012 Supplementary Provisions.md  README.md
docs/03_standards/: README.md
docs/04_development/: DEV-001-development-standard.md.md  (+1 more)
mde_foundation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_mde_cli.py
tools/: README.md  __init__.py  create_document.py  create_project.py  init_repository.py  mde_agent.py  mde_apply.py  mde_git.py  mde_lock.py  mde_log.py  mde_new.py  mde_queue.py  mde_save.py  mde_task.py
(+38 files in other folders)
